<resources>
    <string name="app_name">Color My VIew</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="red">RED</string>
    <string name="click_the_button_to_play">Click the button to play.</string>
    <string name="how_to_play">How to play?</string>
    <string name="clear">CLEAR</string>
</resources>